Adjusting project base, makefile and handler functions

--- a/classification/Makefile
+++ b/classification/Makefile
@@ -3,11 +3,22 @@ mak.SILENT:
 install:
 	pip install -r requirements/base.txt
 
-deploy:
+
+local-run: destroy
+	@echo Construindo imagem docker para execução local...
+	docker build -t classification .
+	@echo Imagem construída com sucesso!
+	docker run classification
+
+deploy: destroy
+	@echo Autenticando...
+	aws ecr get-login-password --region us-east-1 --profile pessoal | docker login --username AWS --password-stdin 274877485409.dkr.ecr.us-east-1.amazonaws.com
+	@echo Autenticado com sucesso!
 	@echo Construindo imagem docker para deploy...
 	docker build -t classification .
 	@echo Imagem construída com sucesso!
 	@echo Atualizando imagem docker no AWS ECR classification...
+	aws ecr batch-delete-image --repository-name classification --image-ids imageTag=latest --profile pessoal
 	docker tag classification:latest 274877485409.dkr.ecr.us-east-1.amazonaws.com/classification
 	docker push 274877485409.dkr.ecr.us-east-1.amazonaws.com/classification
 	@echo Imagem docker AWS ECR classification atualizada com sucesso!
@@ -16,5 +27,6 @@ deploy:
 	@echo Deploy para a AWS Lambda Function classification feito com sucesso!
 
 destroy:
-	@echo Destruindo imagem docker...
+	@echo Limpando docker...
 	docker system prune -a -f
+	@echo Limpo!
