Adjusts in general

--- a/classification/Makefile
+++ b/classification/Makefile
@@ -12,18 +12,18 @@ local-run: destroy
 
 deploy: destroy
 	@echo Autenticando...
-	aws ecr get-login-password --region us-east-1 --profile pessoal | docker login --username AWS --password-stdin 274877485409.dkr.ecr.us-east-1.amazonaws.com
+	aws ecr get-login-password --region ${AWS_REGION} --profile ${AWS_CREDENTIALS_PROFILE} | docker login --username AWS --password-stdin ${AWS_ACCOUNT_NUMBER}.dkr.ecr.${AWS_REGION}.amazonaws.com
 	@echo Autenticado com sucesso!
 	@echo Construindo imagem docker para deploy...
 	docker build -t classification .
 	@echo Imagem construída com sucesso!
 	@echo Atualizando imagem docker no AWS ECR classification...
-	aws ecr batch-delete-image --repository-name classification --image-ids imageTag=latest --profile pessoal
-	docker tag classification:latest 274877485409.dkr.ecr.us-east-1.amazonaws.com/classification
-	docker push 274877485409.dkr.ecr.us-east-1.amazonaws.com/classification
+	aws ecr batch-delete-image --repository-name classification --image-ids imageTag=latest --profile ${AWS_CREDENTIALS_PROFILE}
+	docker tag classification:latest ${AWS_ACCOUNT_NUMBER}.dkr.ecr.${AWS_REGION}.amazonaws.com/classification
+	docker push ${AWS_ACCOUNT_NUMBER}.dkr.ecr.${AWS_REGION}.amazonaws.com/classification
 	@echo Imagem docker AWS ECR classification atualizada com sucesso!
 	@echo Fazendo deploy para a AWS Lambda Function classification...
-	aws lambda update-function-code --function-name classification --image-uri 274877485409.dkr.ecr.us-east-1.amazonaws.com/classification:latest --profile pessoal
+	aws lambda update-function-code --function-name classification --image-uri ${AWS_ACCOUNT_NUMBER}.dkr.ecr.${AWS_REGION}.amazonaws.com/classification:latest --profile ${AWS_CREDENTIALS_PROFILE}
 	@echo Deploy para a AWS Lambda Function classification feito com sucesso!
 
 destroy:
