--- a/grouping/Makefile
+++ b/grouping/Makefile
@@ -3,30 +3,23 @@ mak.SILENT:
 install:
 	pip install -r requirements/base.txt
 
-
-local-run: destroy
-	@echo Construindo imagem docker para execução local...
-	docker build -t grouping .
-	@echo Imagem construída com sucesso!
-	docker run grouping
-
 deploy: destroy
-	@echo Autenticando...
-	aws ecr get-login-password --region us-east-1 --profile pessoal | docker login --username AWS --password-stdin 274877485409.dkr.ecr.us-east-1.amazonaws.com
-	@echo Autenticado com sucesso!
-	@echo Construindo imagem docker para deploy...
+	@echo Authenticating...
+	aws ecr get-login-password --region ${AWS_REGION} --profile ${AWS_CREDENTIALS_PROFILE} | docker login --username AWS --password-stdin ${AWS_ACCOUNT_NUMBER}.dkr.ecr.${AWS_REGION}.amazonaws.com
+	@echo Successfully authenticated!
+	@echo Building docker image to deploy...
 	docker build -t grouping .
-	@echo Imagem construída com sucesso!
-	@echo Atualizando imagem docker no AWS ECR grouping...
-	aws ecr batch-delete-image --repository-name grouping --image-ids imageTag=latest --profile pessoal
-	docker tag grouping:latest 274877485409.dkr.ecr.us-east-1.amazonaws.com/grouping
-	docker push 274877485409.dkr.ecr.us-east-1.amazonaws.com/grouping
-	@echo Imagem docker AWS ECR grouping atualizada com sucesso!
-	@echo Fazendo deploy para a AWS Lambda Function grouping...
-	aws lambda update-function-code --function-name grouping --image-uri 274877485409.dkr.ecr.us-east-1.amazonaws.com/grouping:latest --profile pessoal
-	@echo Deploy para a AWS Lambda Function grouping feito com sucesso!
+	@echo Image built successfully!
+	@echo Updating docker image at AWS ECR grouping...
+	aws ecr batch-delete-image --repository-name grouping --image-ids imageTag=latest --profile ${AWS_CREDENTIALS_PROFILE}
+	docker tag grouping:latest ${AWS_ACCOUNT_NUMBER}.dkr.ecr.${AWS_REGION}.amazonaws.com/grouping
+	docker push ${AWS_ACCOUNT_NUMBER}.dkr.ecr.${AWS_REGION}.amazonaws.com/grouping
+	@echo AWS ECR grouping docker image successfully updated!
+	@echo Deploying to AWS Lambda Function grouping...
+	aws lambda update-function-code --function-name grouping --image-uri ${AWS_ACCOUNT_NUMBER}.dkr.ecr.${AWS_REGION}.amazonaws.com/grouping:latest --profile ${AWS_CREDENTIALS_PROFILE}
+	@echo AWS Lambda Function grouping deploy was successful!
 
 destroy:
-	@echo Limpando docker...
+	@echo Cleaning docker...
 	docker system prune -a -f
-	@echo Limpo!
+	@echo Cleaned!
